# DT3-WASM-Autosplitter

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: game.rs  lib.rs  settings.rs
