[package]
name = "dt3-autosplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/CryZe/asr", features = ["integer-vars"] }
bytemuck = "1.12.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
# strip = true

[profile.release.build-override]
opt-level = 0
